Adding recipient information to receipt.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -222,12 +222,6 @@
     </div>
 
     <div class="row">
-      <div class="col col12">
-        <h3 class="tx-g t-payer f-t">Recebedor</h3>
-      </div>
-    </div>
-
-    <div class="row">
       <div class="col col4">
         <p class="tx-g f-t">
           Valor
@@ -290,7 +284,109 @@
       </div>
     </div>
 
+    <div class="row mt-2" style="margin-top: 2rem;">
+      <div class="col col12">
+        <h3 class="t-payer">Recebedor</h3>
+      </div>
+    </div>
+
     <div class="row">
+      <div class="col col5">
+        <p class="tx-g f-t">
+          Nome
+        </p>
+      </div>
+      <div class="col col7">
+        <p class="ar">
+          {{payerName}}
+        </p>
+      </div>
+      <div class="col col12">
+        <p class="bd-bt"></p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col col5">
+        <p class="tx-g f-t">
+          CPF/CNPJ
+        </p>
+      </div>
+      <div class="col col7">
+        <p class="ar">
+          {{cpfCnpj}}
+        </p>
+      </div>
+      <div class="col col12">
+        <p class="bd-bt"></p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col col5">
+        <p class="tx-g f-t">
+          Banco
+        </p>
+      </div>
+      <div class="col col7">
+        <p class="ar">
+          {{bank}}
+        </p>
+      </div>
+      <div class="col col12">
+        <p class="bd-bt"></p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col col5">
+        <p class="tx-g f-t">
+          Agência
+        </p>
+      </div>
+      <div class="col col7">
+        <p class="ar">
+          {{issuer}}
+        </p>
+      </div>
+      <div class="col col12">
+        <p class="bd-bt"></p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col col5">
+        <p class="tx-g f-t">
+          Conta Corrente
+        </p>
+      </div>
+      <div class="col col7">
+        <p class="ar">
+          {{numberAccount}}
+        </p>
+      </div>
+      <div class="col col12">
+        <p class="bd-bt"></p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col col5">
+        <p class="tx-g f-t">
+          Tipo de conta
+        </p>
+      </div>
+      <div class="col col7">
+        <p class="ar">
+          {{accountType}}
+        </p>
+      </div>
+      <div class="col col12">
+        <p class="bd-bt"></p>
+      </div>
+    </div>
+
+    <div class="row" style="margin-top: 2rem;">
       <div class="col col12">
         <h3 class="t-payer">Pagador</h3>
       </div>
@@ -391,7 +487,6 @@
         <p class="bd-bt"></p>
       </div>
     </div>
-
     <div class="row">
       <div class="col col12 mt-1">
         <div class="card-info footer">
