Adding mask for cpf and cnpj.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -488,7 +488,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col col12 mt-1">
+      <div class="col col12" style="margin-top: 3rem;">
         <div class="card-info footer">
           <div style="float:left; padding-top: 12px;">
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
@@ -512,7 +512,7 @@
       </div>
     </div>
 
-    <div class="row pb-2">
+    <div class="row" style="margin-bottom: 3rem;">
       <div class="col col12 mt-1">
         <div class="card-info footer">
           <div style="float:left; padding-top: 17px;">
